[package]
name = "include_uri"
version = "0.1.0"
edition = "2021"
authors = ["Marco Napetti"]
repository = "https://github.com/nappa85/include_uri"
documentation = "https://docs.rs/include_uri"
readme = "README.md"
license = "WTFPL"
description = "Proc-macro to include URI as literals at build time"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["proc-macro", "include"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.47", default-features = false }
reqwest = { version = "0.11.14", features = ["blocking"] }
syn = { version = "1.0.107", default-features = false, features = ["printing"] }
